# crewai-latex-article-generator

./: .env-example  .gitignore  README.md  pyproject.toml
config/: logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PROMPTS.md  TODO.md  cost_analysis.md  prompts_log.md
docs/prd/: 001_project_structure.md  002_python_package_setup.md  003_version_tracking.md  004_config_loader.md  005_environment_variables.md  006_rate_limits_config.md  007_researcher_agent.md  008_writer_agent.md  009_reviewer_agent.md  010_latex_formatter_agent.md  011_research_task.md  012_writing_task.md  013_review_task.md  014_crew_assembly.md  015_sdk_pipeline.md  016_api_gatekeeper_impl.md  017_bidi_content_handler.md  018_python_graph_generator.md  019_table_generator.md  020_tikz_diagram_generator.md  021_latex_template.md  022_cover_page.md  023_toc_headers_footers.md  024_bibliography_generator.md  025_latex_assembler.md  026_lualatex_compiler.md  027_multi_pass_compiler.md  028_biber_runner.md  029_latex_validator.md  030_pdf_validator.md  031_content_completeness_checker.md  032_cli_argument_parser.md  033_cli_main_entrypoint.md  034_readme_final.md  035_prompts_engineering_log.md  036_cost_analysis.md  037_unit_tests_agents.md  038_unit_tests_services.md  039_unit_tests_latex.md  040_integration_tests.md  (+1 more)
notebooks/: results_analysis.ipynb
results/: references.bib
src/: main.py
src/latex_article_generator/: __init__.py  constants.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_agents.py  test_bibliography_generator.py  (+20 more)
(+24 files in other folders)
