[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latex-article-generator"
version = "1.00"
description = "CrewAI-powered multi-agent LaTeX academic article generator"
authors = [{ name = "Ali Trabeh", email = "atrabe08@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "crewai[anthropic]>=0.80.0",
    "crewai-tools>=1.14.6",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/latex_article_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
